--- a/css/contact.css
+++ b/css/contact.css
@@ -249,16 +249,167 @@
 
   #contact-section {
     width: 100%;
-    height: 70vh;
+    height: 100vh;
     display: flex;
     flex-direction: row;
     justify-content: center;
+    padding-top: 50px;
   }
 
   #contact-section .container {
-    width: 90%;
     display: flex;
     flex-direction: column;
+    width: 90%;
+  }
+
+  #contact-section .left-section {
+    width: 100%;
+
+    /*
+    border: 1px dashed;
+    background-color: rgb(208, 236, 255);
+    */
+    display: flex; /* establish flex container */
+    flex-direction: column; /* make main axis vertical */
+    justify-content: start; /* center items vertically, in this case */
+  }
+
+  #contact-section .left-section .contact-box {
+    background: rgb(32, 32, 32);
+    width: 100%;
+    height: 180px;
+    padding-top: 30px;
+    position: relative;
+  }
+
+  #contact-section .left-section .contact-box .contact-element {
+    color: white;
+    padding-left: 30px;
+    font-weight: bold;
+    font-size: 16px;
+    padding-bottom: 10px;
+  }
+
+  #contact-section .left-section .contact-box p {
+    color: white;
+    padding-left: 30px;
+    padding-right: 30px;
+    font-size: 14px;
+    width: 80%;
+  }
+
+  #contact-section .left-section .contact-box img {
+    position: absolute;
+    right: -20px;
+    top: 165px;
+    width: 60px;
+    transform: rotate(90deg);
+  }
+
+  #contact-section .left-section .description {
+    width: 75%;
+    padding-bottom: 20px;
+    font-size: 20px;
+  }
+
+  #contact-section .right-section {
+    width: 100%;
+    height: 40vw;
+    margin-top: 50px;
+  }
+
+  #contact-section .right-section .form-flex {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  #contact-section .right-section .form-flex .form-element-half {
+    width: 50%;
+    font-size: 16px;
+    font-weight: bold;
+    padding-bottom: 40px;
+  }
+
+  #contact-section .right-section .form-flex .form-element-half input {
+    width: 90%;
+    font-size: 14px;
+    height: 35px;
+    margin-top: 20px;
+    padding-left: 10px;
+    background-color: #e4e4e4;
+    background: none;
+    border: none;
+    border-bottom: 2px solid black;
+  }
+
+  #contact-section .right-section .form-flex .form-element-full {
+    width: 100%;
+    font-size: 16px;
+    font-weight: bold;
+    padding-bottom: 20px;
+    margin-top: 20px;
+  }
+
+  #contact-section .right-section .form-flex .form-element-full textarea {
+    width: 95%;
+    font-size: 14px;
+    height: 125px;
+    margin-top: 20px;
+    padding-left: 10px;
+    background-color: #e4e4e4;
+    background: none;
+    border: none;
+    border-bottom: 2px solid black;
+    font-family: "HelveticaNeue", sans-serif;
+  }
+
+  #contact-section .right-section .form-flex .form-element-half input:hover {
+    border-bottom: 2px solid #f18200;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    transition: 0.3s;
+  }
+
+  #contact-section .right-section .form-flex .form-element-half input:focus {
+    background-color: #e4e4e4;
+    outline: none;
+  }
+
+  #contact-section .right-section .form-flex .form-element-full textarea:hover {
+    border-bottom: 2px solid #f18200;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    transition: 0.3s;
+  }
+
+  #contact-section .right-section .form-flex .form-element-full textarea:focus {
+    background-color: #e4e4e4;
+    outline: none;
+  }
+
+  input:hover,
+  select:hover {
+    background-color: white;
+  }
+
+  input[type="submit"] {
+    margin-top: 10px;
+    width: 175px;
+    height: 45px;
+    font-size: 16px;
+    background-color: #f18200;
+    color: white;
+    font-weight: bold;
+    border: none;
+  }
+
+  input[type="submit"]:hover {
+    background-color: #3056c5;
+    cursor: pointer;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    transition: 0.5s;
   }
 }
 
@@ -276,16 +427,172 @@
 
   #contact-section {
     width: 100%;
-    height: 60vh;
+    height: 80vw;
     display: flex;
     flex-direction: row;
     justify-content: center;
+    padding-top: 50px;
+    background-image: url("/images/Vector2.svg");
+    background-size: 500px;
+    background-repeat: no-repeat;
+    background-position: center right;
+    padding-top: 75px;
+    height: 850px;
   }
 
   #contact-section .container {
-    width: 95%;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+  }
+
+  #contact-section .left-section {
+    width: 100%;
+
+    /*
+    border: 1px dashed;
+    background-color: rgb(208, 236, 255);
+    */
+    display: flex; /* establish flex container */
+    flex-direction: column; /* make main axis vertical */
+    justify-content: start; /* center items vertically, in this case */
+  }
+
+  #contact-section .left-section .contact-box {
+    background: rgb(32, 32, 32);
+    width: 100%;
+    height: 180px;
+    padding-top: 30px;
+    position: relative;
+  }
+
+  #contact-section .left-section .contact-box .contact-element {
+    color: white;
+    padding-left: 30px;
+    font-weight: bold;
+    font-size: 20px;
+    padding-bottom: 10px;
+  }
+
+  #contact-section .left-section .contact-box p {
+    color: white;
+    padding-left: 30px;
+    padding-right: 30px;
+    font-size: 18px;
+    width: 70%;
+  }
+
+  #contact-section .left-section .contact-box img {
+    position: absolute;
+    right: -25px;
+    top: 143px;
+    width: 90px;
+    transform: rotate(90deg);
+  }
+
+  #contact-section .left-section .description {
+    width: 75%;
+    padding-bottom: 20px;
+    font-size: 20px;
+  }
+
+  #contact-section .right-section {
+    width: 100%;
+    height: 40vw;
+    margin-top: 50px;
+  }
+
+  #contact-section .right-section .form-flex {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  #contact-section .right-section .form-flex .form-element-half {
+    width: 50%;
+    font-size: 18px;
+    font-weight: bold;
+    padding-bottom: 40px;
+  }
+
+  #contact-section .right-section .form-flex .form-element-half input {
+    width: 90%;
+    font-size: 15px;
+    height: 35px;
+    margin-top: 20px;
+    padding-left: 10px;
+    background-color: #e4e4e4;
+    background: none;
+    border: none;
+    border-bottom: 2px solid black;
+  }
+
+  #contact-section .right-section .form-flex .form-element-full {
+    width: 100%;
+    font-size: 18px;
+    font-weight: bold;
+    padding-bottom: 20px;
+    margin-top: 20px;
+  }
+
+  #contact-section .right-section .form-flex .form-element-full textarea {
+    width: 95%;
+    font-size: 16px;
+    height: 125px;
+    margin-top: 20px;
+    padding-left: 10px;
+    background-color: #e4e4e4;
+    background: none;
+    border: none;
+    border-bottom: 2px solid black;
+    font-family: "HelveticaNeue", sans-serif;
+  }
+
+  #contact-section .right-section .form-flex .form-element-half input:hover {
+    border-bottom: 2px solid #f18200;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    transition: 0.3s;
+  }
+
+  #contact-section .right-section .form-flex .form-element-half input:focus {
+    background-color: #e4e4e4;
+    outline: none;
+  }
+
+  #contact-section .right-section .form-flex .form-element-full textarea:hover {
+    border-bottom: 2px solid #f18200;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    transition: 0.3s;
+  }
+
+  #contact-section .right-section .form-flex .form-element-full textarea:focus {
+    background-color: #e4e4e4;
+    outline: none;
+  }
+
+  input:hover,
+  select:hover {
+    background-color: white;
+  }
+
+  input[type="submit"] {
+    margin-top: 10px;
+    width: 200px;
+    height: 55px;
+    font-size: 18px;
+    background-color: #f18200;
+    color: white;
+    font-weight: bold;
+    border: none;
+  }
+
+  input[type="submit"]:hover {
+    background-color: #3056c5;
+    cursor: pointer;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    transition: 0.5s;
   }
 }
 
@@ -316,6 +623,7 @@
     background-repeat: no-repeat;
     background-position: center right;
     padding-top: 75px;
+    height: initial;
   }
 
   #contact-section .container {
@@ -329,27 +637,51 @@
   }
 
   #contact-section .left-section .contact-box {
-    background: rgb(14, 14, 14);
+    background: rgb(32, 32, 32);
     width: 90%;
-    height: 200px;
+    height: 220px;
     padding-top: 30px;
+    position: relative;
   }
 
   #contact-section .left-section .contact-box .contact-element {
     color: white;
     padding-left: 30px;
     font-weight: bold;
+    font-size: 20px;
+    padding-bottom: 10px;
   }
 
   #contact-section .left-section .contact-box p {
     color: white;
     padding-left: 30px;
     padding-right: 30px;
+    font-size: 18px;
+    width: 70%;
   }
 
   #contact-section .left-section .contact-box img {
     position: absolute;
-    left: 41%;
+    right: -25px;
+    width: 100px;
+  }
+
+  #contact-section .left-section {
+    width: 50%;
+    height: 80vh;
+    /*
+    border: 1px dashed;
+    background-color: rgb(208, 236, 255);
+    */
+    display: flex; /* establish flex container */
+    flex-direction: column; /* make main axis vertical */
+    justify-content: start; /* center items vertically, in this case */
+  }
+
+  #contact-section .left-section .description {
+    width: 75%;
+    padding-bottom: 20px;
+    font-size: 20px;
   }
 
   #contact-section .right-section {
